MFC r282645, r282646 and r282730: * Prevent switching to NULL or own window in the "vt_proc_window_switch"   function. This fixes an issue where X11 keyboard input can appear   stuck. The cause of the problem is a duplicate TTY device window   switch IOCTL during boot, which leaves the "vt_switch_timer" running,   because the current window is already selected. While at it factor out   some NULL checks. * The "SYSCTL_INT()" default value is only used for read only SYSCTLs   and is not applicable unless the integer pointer is NULL. Set it to   zero to avoid confusion. While at it remove extra semicolon at the end   of the "VT_SYSCTL_INT()" macro. * Ensure the result from signed subtraction under modulus does not   become negative.

PR:			200032

Former-commit-id: 96342ac15e4cf4a990bbedcd833bdc235d23a978